// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`z-ltcs-ins-cards-card.vue pc layout should be rendered correctly 1`] = `
<div
  class="root"
  data-z-data-table=""
  data-z-ltcs-ins-cards-card=""
>
  <z-subheader-stub>
    介護保険被保険者証
  </z-subheader-stub>
  <v-card-stub
    class="py-4"
    loaderheight="4"
    tag="div"
  >
    <div
      class="v-data-table v-data-table--has-bottom theme--light table clickable"
      data-desktop-table=""
    >
      <div
        class="v-data-table__wrapper"
      >
        <table>
          <colgroup>
            <col
              class=""
            />
            <col
              class=""
            />
            <col
              class=""
            />
            <col
              class=""
            />
          </colgroup>
          <thead
            class="v-data-table-header"
          >
            <tr>
              <th
                aria-label="保険者名"
                class="text-start insurerName"
                role="columnheader"
                scope="col"
              >
                <span>
                  保険者名
                </span>
              </th>
              <th
                aria-label="要介護度"
                class="text-start ltcsLevel"
                role="columnheader"
                scope="col"
              >
                <span>
                  要介護度
                </span>
              </th>
              <th
                aria-label="被保険者証番号"
                class="text-start insNumber"
                role="columnheader"
                scope="col"
              >
                <span>
                  被保険者証番号
                </span>
              </th>
              <th
                aria-label="適用日"
                class="text-start effectivatedOn"
                role="columnheader"
                scope="col"
              >
                <span>
                  適用日
                </span>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class=""
            >
              <td
                class="text-start"
              >
                伊具郡丸森町
              </td>
              <td
                class="text-start"
              >
    認定済：要介護5
              </td>
              <td
                class="text-start"
              >
                3582530952
              </td>
              <td
                class="text-start"
              >
                <time
                  datetime="1980-10-08"
                >
                  昭55.10.08
                </time>
              </td>
            </tr>
            <tr
              class=""
            >
              <td
                class="text-start"
              >
                松浦市
              </td>
              <td
                class="text-start"
              >
    認定済：事業対象者
              </td>
              <td
                class="text-start"
              >
                4352300586
              </td>
              <td
                class="text-start"
              >
                <time
                  datetime="2010-12-05"
                >
                  平22.12.05
                </time>
              </td>
            </tr>
            <tr
              class=""
            >
              <td
                class="text-start"
              >
                佐用郡佐用町
              </td>
              <td
                class="text-start"
              >
    申請中：要介護1
              </td>
              <td
                class="text-start"
              >
                2621639292
              </td>
              <td
                class="text-start"
              >
                <time
                  datetime="1985-07-07"
                >
                  昭60.07.07
                </time>
              </td>
            </tr>
            <tr
              class=""
            >
              <td
                class="text-start"
              >
                高知市
              </td>
              <td
                class="text-start"
              >
    認定済：要支援1
              </td>
              <td
                class="text-start"
              >
                1419730584
              </td>
              <td
                class="text-start"
              >
                <time
                  datetime="2015-05-07"
                >
                  平27.05.07
                </time>
              </td>
            </tr>
            <tr
              class=""
            >
              <td
                class="text-start"
              >
                下閉伊郡田野畑村
              </td>
              <td
                class="text-start"
              >
    申請中：要介護4
              </td>
              <td
                class="text-start"
              >
                5712851118
              </td>
              <td
                class="text-start"
              >
                <time
                  datetime="2019-09-25"
                >
                  令01.09.25
                </time>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <v-divider-stub />
      <div
        class="text-right pa-2"
      >
        <a
          class="v-btn-stub"
          color="primary"
          nuxt=""
          text=""
          to="/users/1/ltcs-ins-cards/new"
        >
          <span>
            被保険者証を登録
          </span>
          <v-icon-stub
            right=""
          >
            M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z
          </v-icon-stub>
        </a>
      </div>
    </div>
    <!---->
  </v-card-stub>
</div>
`;

exports[`z-ltcs-ins-cards-card.vue smart phone layout should be rendered correctly 1`] = `
<div
  class="root"
  data-z-data-table=""
  data-z-ltcs-ins-cards-card=""
>
  <z-subheader-stub>
    介護保険被保険者証
  </z-subheader-stub>
  <!---->
  <!---->
  <v-card-stub
    class="mobileRoot"
    loaderheight="4"
    tag="div"
  >
    <v-card-text-stub
      class="text"
      tag="div"
    >
      <div
        class="mobileColumn"
      >
        <div
          class="text-caption insurerName header"
        >
            保険者名
        </div>
        <div
          class="text-body-2 text--primary value"
        >
          伊具郡丸森町
        </div>
      </div>
      <div
        class="mobileColumn"
      >
        <div
          class="text-caption ltcsLevel header"
        >
            要介護度
        </div>
        <div
          class="text-body-2 text--primary value"
        >
    認定済：要介護5
        </div>
      </div>
      <div
        class="mobileColumn"
      >
        <div
          class="text-caption insNumber header"
        >
            被保険者証番号
        </div>
        <div
          class="text-body-2 text--primary value"
        >
          3582530952
        </div>
      </div>
      <div
        class="mobileColumn"
      >
        <div
          class="text-caption effectivatedOn header"
        >
            適用日
        </div>
        <div
          class="text-body-2 text--primary value"
        >
          <time
            datetime="1980-10-08"
          >
            昭55.10.08
          </time>
        </div>
      </div>
    </v-card-text-stub>
    <v-card-actions-stub
      class="actions"
      data-mobile-actions=""
      tag="div"
    >
      <v-spacer-stub
        tag="div"
      />
      <a
        class="v-btn-stub"
        color="primary"
        nuxt=""
        text=""
        to="/users/1/ltcs-ins-cards/10"
      >
        <span>
          詳細を見る
        </span>
        <v-icon-stub
          right=""
        >
          M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z
        </v-icon-stub>
      </a>
    </v-card-actions-stub>
  </v-card-stub>
  <v-card-stub
    class="mobileRoot"
    loaderheight="4"
    tag="div"
  >
    <v-card-text-stub
      class="text"
      tag="div"
    >
      <div
        class="mobileColumn"
      >
        <div
          class="text-caption insurerName header"
        >
            保険者名
        </div>
        <div
          class="text-body-2 text--primary value"
        >
          松浦市
        </div>
      </div>
      <div
        class="mobileColumn"
      >
        <div
          class="text-caption ltcsLevel header"
        >
            要介護度
        </div>
        <div
          class="text-body-2 text--primary value"
        >
    認定済：事業対象者
        </div>
      </div>
      <div
        class="mobileColumn"
      >
        <div
          class="text-caption insNumber header"
        >
            被保険者証番号
        </div>
        <div
          class="text-body-2 text--primary value"
        >
          4352300586
        </div>
      </div>
      <div
        class="mobileColumn"
      >
        <div
          class="text-caption effectivatedOn header"
        >
            適用日
        </div>
        <div
          class="text-body-2 text--primary value"
        >
          <time
            datetime="2010-12-05"
          >
            平22.12.05
          </time>
        </div>
      </div>
    </v-card-text-stub>
    <v-card-actions-stub
      class="actions"
      data-mobile-actions=""
      tag="div"
    >
      <v-spacer-stub
        tag="div"
      />
      <a
        class="v-btn-stub"
        color="primary"
        nuxt=""
        text=""
        to="/users/1/ltcs-ins-cards/11"
      >
        <span>
          詳細を見る
        </span>
        <v-icon-stub
          right=""
        >
          M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z
        </v-icon-stub>
      </a>
    </v-card-actions-stub>
  </v-card-stub>
  <v-card-stub
    class="mobileRoot"
    loaderheight="4"
    tag="div"
  >
    <v-card-text-stub
      class="text"
      tag="div"
    >
      <div
        class="mobileColumn"
      >
        <div
          class="text-caption insurerName header"
        >
            保険者名
        </div>
        <div
          class="text-body-2 text--primary value"
        >
          佐用郡佐用町
        </div>
      </div>
      <div
        class="mobileColumn"
      >
        <div
          class="text-caption ltcsLevel header"
        >
            要介護度
        </div>
        <div
          class="text-body-2 text--primary value"
        >
    申請中：要介護1
        </div>
      </div>
      <div
        class="mobileColumn"
      >
        <div
          class="text-caption insNumber header"
        >
            被保険者証番号
        </div>
        <div
          class="text-body-2 text--primary value"
        >
          2621639292
        </div>
      </div>
      <div
        class="mobileColumn"
      >
        <div
          class="text-caption effectivatedOn header"
        >
            適用日
        </div>
        <div
          class="text-body-2 text--primary value"
        >
          <time
            datetime="1985-07-07"
          >
            昭60.07.07
          </time>
        </div>
      </div>
    </v-card-text-stub>
    <v-card-actions-stub
      class="actions"
      data-mobile-actions=""
      tag="div"
    >
      <v-spacer-stub
        tag="div"
      />
      <a
        class="v-btn-stub"
        color="primary"
        nuxt=""
        text=""
        to="/users/1/ltcs-ins-cards/12"
      >
        <span>
          詳細を見る
        </span>
        <v-icon-stub
          right=""
        >
          M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z
        </v-icon-stub>
      </a>
    </v-card-actions-stub>
  </v-card-stub>
  <v-card-stub
    class="mobileRoot"
    loaderheight="4"
    tag="div"
  >
    <v-card-text-stub
      class="text"
      tag="div"
    >
      <div
        class="mobileColumn"
      >
        <div
          class="text-caption insurerName header"
        >
            保険者名
        </div>
        <div
          class="text-body-2 text--primary value"
        >
          高知市
        </div>
      </div>
      <div
        class="mobileColumn"
      >
        <div
          class="text-caption ltcsLevel header"
        >
            要介護度
        </div>
        <div
          class="text-body-2 text--primary value"
        >
    認定済：要支援1
        </div>
      </div>
      <div
        class="mobileColumn"
      >
        <div
          class="text-caption insNumber header"
        >
            被保険者証番号
        </div>
        <div
          class="text-body-2 text--primary value"
        >
          1419730584
        </div>
      </div>
      <div
        class="mobileColumn"
      >
        <div
          class="text-caption effectivatedOn header"
        >
            適用日
        </div>
        <div
          class="text-body-2 text--primary value"
        >
          <time
            datetime="2015-05-07"
          >
            平27.05.07
          </time>
        </div>
      </div>
    </v-card-text-stub>
    <v-card-actions-stub
      class="actions"
      data-mobile-actions=""
      tag="div"
    >
      <v-spacer-stub
        tag="div"
      />
      <a
        class="v-btn-stub"
        color="primary"
        nuxt=""
        text=""
        to="/users/1/ltcs-ins-cards/13"
      >
        <span>
          詳細を見る
        </span>
        <v-icon-stub
          right=""
        >
          M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z
        </v-icon-stub>
      </a>
    </v-card-actions-stub>
  </v-card-stub>
  <v-card-stub
    class="mobileRoot"
    loaderheight="4"
    tag="div"
  >
    <v-card-text-stub
      class="text"
      tag="div"
    >
      <div
        class="mobileColumn"
      >
        <div
          class="text-caption insurerName header"
        >
            保険者名
        </div>
        <div
          class="text-body-2 text--primary value"
        >
          下閉伊郡田野畑村
        </div>
      </div>
      <div
        class="mobileColumn"
      >
        <div
          class="text-caption ltcsLevel header"
        >
            要介護度
        </div>
        <div
          class="text-body-2 text--primary value"
        >
    申請中：要介護4
        </div>
      </div>
      <div
        class="mobileColumn"
      >
        <div
          class="text-caption insNumber header"
        >
            被保険者証番号
        </div>
        <div
          class="text-body-2 text--primary value"
        >
          5712851118
        </div>
      </div>
      <div
        class="mobileColumn"
      >
        <div
          class="text-caption effectivatedOn header"
        >
            適用日
        </div>
        <div
          class="text-body-2 text--primary value"
        >
          <time
            datetime="2019-09-25"
          >
            令01.09.25
          </time>
        </div>
      </div>
    </v-card-text-stub>
    <v-card-actions-stub
      class="actions"
      data-mobile-actions=""
      tag="div"
    >
      <v-spacer-stub
        tag="div"
      />
      <a
        class="v-btn-stub"
        color="primary"
        nuxt=""
        text=""
        to="/users/1/ltcs-ins-cards/14"
      >
        <span>
          詳細を見る
        </span>
        <v-icon-stub
          right=""
        >
          M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z
        </v-icon-stub>
      </a>
    </v-card-actions-stub>
  </v-card-stub>
  <div
    class="z-data-table__footer footerMobile"
  >
    <a
      block=""
      class="v-btn-stub"
      color="primary"
      dark=""
      nuxt=""
      to="/users/1/ltcs-ins-cards/new"
    >
      <span>
        被保険者証を登録
      </span>
    </a>
  </div>
  <!---->
</div>
`;
